[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrostreampy"
version = "0.0.1"
authors = [
  { name="Jan-Niklas Pippert", email="pippertjanniklas@gmail.com" },
]
description = "Package to model stellar tidal streams."
readme = "README.md"
requires-python = ">=3.9.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jnpippert/streamPy"
"Bug Tracker" = "https://github.com/jnpippert/streamPy/issues"