[build-system]
requires = ["setuptools>=61.0",
            "astropy>=5.3.1",
            "scipy>=1.11.1",
            "numpy>=1.25.2",
            "matplotlib>=3.7.2",
            "lmfit>=1.2.2"
]
build-backend = "setuptools.build_meta"


[project]
name = "astrostreampy"
version = "1.8.0"
authors = [
  { name="Jan-Niklas Pippert", email="jnpippert@usm.lmu.de" },
]
description = "Package to model stellar tidal streams."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/jnpippert/streamPy"
"Bug Tracker" = "https://github.com/jnpippert/streamPy/issues"

[tool.setuptools.packages.find]
exclude = ["sample_images*","*fits","test.py","*txt"]